RESOLVED FIXED188432
Fix copyright headers on new ISO parsing class
https://bugs.webkit.org/show_bug.cgi?id=188432
Summary Fix copyright headers on new ISO parsing class
Charlie Turner
Reported 2018-08-09 03:18:06 PDT
Fix copyright headers on new ISO parsing class
Attachments
Patch (2.37 KB, patch)
2018-08-09 03:19 PDT, Charlie Turner
no flags
Patch for landing (22.58 KB, patch)
2018-08-09 03:20 PDT, Charlie Turner
no flags
Patch (2.39 KB, patch)
2018-08-09 04:12 PDT, Charlie Turner
no flags
Patch for landing (2.39 KB, patch)
2018-08-09 04:12 PDT, Charlie Turner
no flags
Charlie Turner
Comment 1 2018-08-09 03:19:53 PDT
Charlie Turner
Comment 2 2018-08-09 03:20:22 PDT
Created attachment 346831 [details] Patch for landing
WebKit Commit Bot
Comment 3 2018-08-09 03:21:32 PDT
Comment on attachment 346831 [details] Patch for landing Rejecting attachment 346831 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'apply-attachment', '--no-update', '--non-interactive', 346831, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as commit-queue@webkit.org... Fetching: https://bugs.webkit.org/attachment.cgi?id=346831&action=edit Fetching: https://bugs.webkit.org/show_bug.cgi?id=188432&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Processing patch 346831 from bug 188432. Fetching: https://bugs.webkit.org/attachment.cgi?id=346831 Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Parsed 11 diffs from patch file(s). patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/Modules/encryptedmedia/InitDataRegistry.cpp Hunk #1 FAILED at 28. Hunk #2 succeeded at 45 with fuzz 2 (offset 6 lines). Hunk #3 FAILED at 104. 2 out of 3 hunks FAILED -- saving rejects to file Source/WebCore/Modules/encryptedmedia/InitDataRegistry.cpp.rej patching file Source/WebCore/Sources.txt Hunk #1 FAILED at 1700. 1 out of 1 hunk FAILED -- saving rejects to file Source/WebCore/Sources.txt.rej patching file Source/WebCore/WebCore.xcodeproj/project.pbxproj Hunk #1 succeeded at 13283 (offset 4 lines). Hunk #2 FAILED at 24730. 1 out of 2 hunks FAILED -- saving rejects to file Source/WebCore/WebCore.xcodeproj/project.pbxproj.rej patching file Source/WebCore/platform/graphics/iso/ISOProtectionSystemSpecificHeaderBox.cpp patching file Source/WebCore/platform/graphics/iso/ISOProtectionSystemSpecificHeaderBox.h patching file Source/WebKit/WebProcess/EntryPoint/unix/WebProcessMain.cpp patching file Tools/Scripts/webkitpy/layout_tests/servers/apache_http_server.py patching file LayoutTests/imported/w3c/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file LayoutTests/imported/w3c/web-platform-tests/encrypted-media/scripts/generate-request-disallowed-input.js Hunk #1 FAILED at 24. Hunk #2 succeeded at 90 with fuzz 2 (offset 52 lines). 1 out of 2 hunks FAILED -- saving rejects to file LayoutTests/imported/w3c/web-platform-tests/encrypted-media/scripts/generate-request-disallowed-input.js.rej patching file LayoutTests/platform/gtk/TestExpectations Hunk #1 succeeded at 1073 (offset -1 lines). Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output: https://webkit-queues.webkit.org/results/8807679
Charlie Turner
Comment 4 2018-08-09 04:12:06 PDT
Charlie Turner
Comment 5 2018-08-09 04:12:37 PDT
Created attachment 346833 [details] Patch for landing
WebKit Commit Bot
Comment 6 2018-08-09 04:50:56 PDT
Comment on attachment 346833 [details] Patch for landing Clearing flags on attachment: 346833 Committed r234721: <https://trac.webkit.org/changeset/234721>
WebKit Commit Bot
Comment 7 2018-08-09 04:50:58 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2018-08-09 04:53:02 PDT
Note You need to log in before you can comment on or make changes to this bug.