Fix copyright headers on new ISO parsing class https://bugs.webkit.org/show_bug.cgi?id=188432

Unreviewed fix.

This was left off from a previous bug by mistake, retrospectively
adding the correct copyright headers.

No tests required.


* platform/graphics/iso/ISOProtectionSystemSpecificHeaderBox.cpp:
* platform/graphics/iso/ISOProtectionSystemSpecificHeaderBox.h:


Canonical link: https://commits.webkit.org/203536@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234721 268f45cc-cd09-0410-ab3c-d52691b4dbfc